# C-Text-Adventure

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CompileTimeStrings.h  CoolModule.ixx  CppProperties.json  GameRender.cpp  GameRender.h  GameScript.cpp  GameScript.h  GameState.cpp  GameState.h  IndexVector.c  IndexVector.cpp  IndexVector.h  Inventory.h  MarkUp.cpp  MarkUp.h  Renderer.cpp  Renderer.h  ShaderCompiler.cpp  ShaderCompiler.h  StringHash.c  StringHash.cpp  StringHash.h  SweetModule.ixx  TextProcessing.cpp  TextProcessing.h  Vulkan.cpp  Vulkan.h  build.sh  commands.c  commands.cpp  commands.h  items.c  items.cpp  items.h  main.c  main.cpp  parse.c  (+10 more)
SFML/include/SFML/: OpenGL.hpp
SFML/include/SFML/System/: Time.hpp
SFML/lib/: sfml-audio-s.lib  sfml-main-d.lib  sfml-main.lib  sfml-network-s-d.lib  sfml-network-s.lib  sfml-system-s-d.lib  sfml-system-s.lib  sfml-window-s-d.lib  sfml-window-s.lib
Shaders/: fragment.glsl  vertex.glsl
VK/Include/vulkan/: vulkan.hpp
VK/Lib/: VKstatic.1.lib  VkLayer_api_dump.lib  VkLayer_core_validation.lib  VkLayer_device_simulation.lib  VkLayer_monitor.lib  VkLayer_object_tracker.lib  VkLayer_parameter_validation.lib  VkLayer_screenshot.lib  VkLayer_threading.lib  VkLayer_unique_objects.lib  VkLayer_utils.lib
cereal/archives/: json.hpp
